--- a/composer.json
+++ b/composer.json
@@ -39,6 +39,7 @@
   "scripts": {
     "fixcs": "PHP_CS_FIXER_IGNORE_ENV=1 vendor/bin/php-cs-fixer fix -v --diff --allow-risky=yes",
     "psalm": "psalm --show-info=true --no-diff ",
-    "test": "phpunit --testdox"
+    "test": "phpunit --testdox",
+    "test-coverage": "XDEBUG_MODE=coverage phpunit --colors=always --coverage-html var/test/coverage"
   }
 }
