--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -33,3 +33,7 @@ jobs:
     - name: Static Analysis
       continue-on-error: true
       run: composer psalm
+
+    - name: Type coverage
+      continue-on-error: true
+      run: composer psalm -- --shepherd --stats
